components/manifests/overlays/hcmais/jsell-sso-poc/backend-sso-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
spec:
  template:
    spec:
      containers:
      - name: backend-api
