components/manifests/overlays/hcmais/jsell-sso-poc/frontend-sso-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      containers:
      - name: frontend
